--- a/tests/fixtures/goal.html
+++ b/tests/fixtures/goal.html
@@ -3,21 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Курсы по программированию Хекслет</title>
-    <link rel="stylesheet" media="all" href="ru-hexlet-io-courses_files/ru-hexlet-io-assets-menu.css">
+    <link rel="stylesheet" media="all" href="https://cdn2.hexlet.io/assets/menu.css">
     <link rel="stylesheet" media="all" href="ru-hexlet-io-courses_files/ru-hexlet-io-assets-application.css">
     <link href="ru-hexlet-io-courses_files/ru-hexlet-io-courses.html" rel="canonical">
   </head>
   <body>
-    <img src="ru-hexlet-io-courses_files/ru-hexlet-io-images-logos-logo.png" alt="Логотип страницы">
     <img src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-php.png" alt="Иконка профессии PHP-программист">
     <h3>
       <a href="/professions/php">PHP-программист</a>
     </h3>
-    <img src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-javascript.jpg" alt="Иконка профессии Javascript-программист">
-    <h3>
-      <a href="/professions/php">Javascript-программист</a>
-    </h3>
-    <script src="ru-hexlet-io-courses_files/ru-hexlet-io-v3"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="ru-hexlet-io-courses_files/ru-hexlet-io-packs-js-runtime.js"></script>
   </body>
 </html>
